the 1px shift that I just had to fix

--- a/app/assets/stylesheets/session_modal.css
+++ b/app/assets/stylesheets/session_modal.css
@@ -37,7 +37,7 @@
   margin-top: 15px;
 }
 .password {
-  margin-left: 4px;
+  margin-left: 5px;
 }
 
 .submit-button, .demo-button {
